Constraint the added texts and picture

--- a/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/strings.xml
+++ b/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/strings.xml
@@ -34,6 +34,13 @@
     <string name="congratulations">Congratulations!</string>
     <string name="share">Share</string>
     <string name="sharing_not_available">Sharing Not Available</string>
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Profile content -->
+    <string name="bio_text">Hi, I am Tzu-Hsien Yeh.\n\nI am a prudent person prone to plan head and think twice before actions, yet this personality do not stop me from stepping out the comfort zone to attempt new things, such as the biomedical research, live performances, and the exchange programs.\nThe attempts in other fields and the experience in scientific ideas and language exchanges have inspired me to learn how integration of knowledge of different fields could make works efficient and effective.</string>
+    <string name="nickname">Nickname</string>
+    <string name="name">Name</string>
+    <string name="about_me">About me</string>
+    <string name="tzu_hsien_yeh">Tzu-Hsien Yeh</string>
+    <string name="oo">OO</string>
+    <string name="profile_pic">profile pic</string>
 </resources>
