Revise about me content and style

--- a/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/strings.xml
+++ b/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="sharing_not_available">Sharing Not Available</string>
 
     <!-- Profile content -->
-    <string name="bio_text">I am Tzu-Hsien Yeh.\nI am a prudent person prone to plan head and think twice before actions, yet this does not stop me from stepping out the comfort zone to attempt new things, such as the biomedical research, live performances, and the exchange programs.\nThe attempts in other fields and the experience in scientific ideas and language exchanges have inspired me to learn how integration of knowledge of different fields could make works efficient and effective.</string>
+    <string name="bio_text">I am Tzu-Hsien Yeh.\nI enjoy using and creating educational and recreational apps. Graphic design and drawing are some of my passion as well. I would like to develop apps that make life easier and more fun.</string>
     <string name="nickname">Nick Name</string>
     <string name="name">Name</string>
     <string name="about_me">About Me</string>
